# dioxus-template

./: .gitignore  Cargo.toml  Dioxus.toml  ReadMe.md  flake.nix
assets/: main.css
src/: main.rs
